<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/info_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="#201a99">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/info_title"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>
        <ImageView
            android:id="@+id/info_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/overflow"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/infomation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_title"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp">
        <RelativeLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_name"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xxx"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/studentid"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:layout_below="@id/name"
            android:gravity="center_vertical"
            android:layout_marginTop="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_stdid"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/stdid_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1111111111"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:layout_below="@id/studentid"
            android:gravity="center_vertical"
            android:layout_marginTop="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_gender"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/gender_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="男"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/verifyid"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:layout_below="@id/gender"
            android:gravity="center_vertical"
            android:layout_marginTop="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_verify"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/verifyid_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="99999"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>


        </RelativeLayout>
        <LinearLayout
            android:id="@+id/info_choose_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/verifyid"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_open_time"
                android:textSize="18sp"
                android:textColor="@android:color/holo_blue_light"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/open_time_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="@string/info_open_time_value"
                android:textSize="15sp"
                android:textColor="@android:color/holo_blue_dark"
                />

        </LinearLayout>

        <Button
            android:id="@+id/start_chooose_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/info_choose_tips"
            android:background="@color/involid"
            android:text="@string/info_end_button_text"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:enabled="false"/>
    </LinearLayout>

</RelativeLayout>

