<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/choose_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="#201a99">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/choose_title"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/expanded_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_title"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp">
        <ExpandableListView
            android:id="@+id/numberChosse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/other_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/expanded_menu"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/choose_other_info_tip"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:visibility="invisible"/>
    <LinearLayout
            android:id="@+id/otherInfo_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/other_tip">
    </LinearLayout>
    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#204a9f"
        android:text="@string/choose_submit_text"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>
</RelativeLayout>
