<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/info_title_c"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="#201a99">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/info_title_c"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>
        <ImageView
            android:id="@+id/info_menu_c"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/overflow"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/infomation_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_title_c"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp">
        <RelativeLayout
            android:id="@+id/name_c"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_name_c"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/name_value_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="XXX"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/studentid_c"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:layout_below="@id/name_c"
            android:gravity="center_vertical"
            android:layout_marginTop="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_stdid_c"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/stdid_value_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1111111111"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>


        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/gender_c"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:layout_below="@id/studentid_c"
            android:gravity="center_vertical"
            android:layout_marginTop="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_gender_c"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/gender_value_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="男"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/state_c"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:layout_below="@id/gender_c"
            android:gravity="center_vertical"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_state_c"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/state_value_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_state_c_value"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>


        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/build_c"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:layout_below="@id/state_c"
            android:gravity="center_vertical"
            android:layout_marginTop="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_building"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/build_value_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/room_c"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:layout_below="@id/build_c"
            android:gravity="center_vertical"
            android:layout_marginTop="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_dorm"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/room_value_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5327"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>

        </RelativeLayout>
    </LinearLayout>
    <ImageView
        android:layout_below="@id/infomation_c"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:src="@drawable/map" />
</RelativeLayout>
