<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="#201a99">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/login_title"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/login_sys_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_title"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/login_sys_name"
        android:textSize="39sp"
        android:textColor="#5378ba"/>
    <RelativeLayout
        android:id="@+id/loginlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_sys_name">
        <RelativeLayout
            android:id="@+id/userframe"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <ImageView
                android:id="@+id/usericon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/user"/>
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:ems="20"
                android:layout_toRightOf="@id/usericon"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="4dp"
                android:singleLine="true"
                android:hint="@string/login_username_hint"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/edittest_cursor"
                android:focusableInTouchMode="true"
                android:background="@null"
                android:drawableBottom="@drawable/edittext_selector"/>
            <ImageView
                android:id="@+id/usernamecancel"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_alignRight="@id/username"
                android:src="@drawable/cancel"
                android:visibility="invisible"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/lockframe"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/userframe">

            <ImageView
                android:id="@+id/lockicon"
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:src="@drawable/lock"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:ems="20"
                android:layout_toRightOf="@id/lockicon"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="4dp"
                android:singleLine="true"
                android:hint="@string/login_password_hint"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/edittest_cursor"
                android:focusableInTouchMode="true"
                android:background="@null"
                android:drawableBottom="@drawable/edittext_selector"
                android:inputType="textPassword"/>
            <ImageView
                android:id="@+id/passwordcancel"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_alignRight="@id/password"
                android:src="@drawable/cancel"
                android:visibility="invisible"/>
        </RelativeLayout>
        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/lockframe"
            android:background="#204a9f"
            android:text="@string/login_button_text"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
    </RelativeLayout>
</RelativeLayout>
